[gd_scene load_steps=3 format=3 uid="uid://b1wrixd3lkb7o"]

[ext_resource type="Script" uid="uid://baust4igemjm6" path="res://windows/newTagWindow/NewTagWindow.gd" id="1_osyyv"]
[ext_resource type="PackedScene" uid="uid://dsfg8hlt3oawe" path="res://books/tag/TagContainer.tscn" id="2_osyyv"]

[node name="NewTagWindow" type="Window"]
oversampling_override = 1.0
title = "Nova tag"
initial_position = 2
size = Vector2i(600, 400)
visible = false
exclusive = true
force_native = true
script = ExtResource("1_osyyv")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Aviso!"
force_native = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
text = "Nova tag"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/NameContainer/HBoxContainer"]
layout_mode = 2
text = "Nome:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
clear_button_enabled = true

[node name="BackgroundColor" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BackgroundColor"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/BackgroundColor/HBoxContainer"]
layout_mode = 2
text = "Cor do fundo:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/BackgroundColor/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="ForegroundColor" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ForegroundColor"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ForegroundColor/HBoxContainer"]
layout_mode = 2
text = "Cor do texto:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ForegroundColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/ForegroundColor/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="ResultContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
text = "Resultado:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tag" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TagContainer" parent="MarginContainer/VBoxContainer/Tag" instance=ExtResource("2_osyyv")]
layout_mode = 2

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_default_cursor_shape = 2
disabled = true
text = "Criar"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/NameContainer/HBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/BackgroundColor/HBoxContainer/BackgroundColorPickerButton" to="." method="_on_background_color_picker_button_color_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/ForegroundColor/HBoxContainer/ForegroundColorPickerButton" to="." method="_on_foreground_color_picker_button_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
